DuPont DevSB/src/objects/Order__c.object
<CustomObject>
    <fields>
        <fullName>AccountLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold To Party Description</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>AccountLookup__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <label>Created By</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Status__c</fullName>
        <label>Credit Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Segment__c</fullName>
        <label>Customer Segment</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Currency__c</fullName>
        <label>Document Currency</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type_Description__c</fullName>
        <label>Document Type Description</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_type__c</fullName>
        <label>Document Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ext_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ext ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders (Ext ID)</relationshipLabel>
        <relationshipName>Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Net_Value__c</fullName>
        <label>Net Value</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Creation_Dates__c</fullName>
        <label>Order Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <label>Order Date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Status__c</fullName>
        <label>Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchase_Order_Number__c</fullName>
        <label>Purchase Order Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Delivery_Date__c</fullName>
        <label>Requested Delivery Date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Organization__c</fullName>
        <label>Sales Organization</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Conditions__c</fullName>
        <label>Shipping Conditions</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold To Party ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders (Sold To Party ID)</relationshipLabel>
        <relationshipName>Orders2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sold_To_Party_Country__c</fullName>
        <label>Sold To Party Country</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Party_ID__c</fullName>
        <label>Sold To Party ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Order</label>
    <listViews>
        <fullName>Todays_Orders</fullName>
        <columns>NAME</columns>
        <columns>Document_type__c</columns>
        <columns>AccountLookup__c</columns>
        <columns>Order_Date__c</columns>
        <columns>Purchase_Order_Number__c</columns>
        <columns>Sales_Organization__c</columns>
        <columns>Division__c</columns>
        <columns>Credit_Status__c</columns>
        <columns>Document_Currency__c</columns>
        <columns>Net_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Orders</label>
    </listViews>
    <nameField>
        <label>Document Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>